<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:id="@+id/content_container"
	android:layout_width="match_parent"
	android:layout_height="wrap_content">

	<RelativeLayout
		android:id="@+id/paginaregistro"
		android:layout_marginTop="0dp"
		android:layout_marginStart="0dp"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<View
			android:id="@+id/vistapagina"
			android:layout_width="match_parent"
			android:layout_height="823dp"
			android:layout_marginStart="0dp"
			android:layout_marginTop="0dp"
			android:background="@drawable/_bg__registro_ek2_shape"
			android:backgroundTint="#FFFFFF" />

		<View
			android:id="@+id/contenedorinfo"
			android:layout_width="352dp"
			android:layout_height="456dp"
			android:layout_marginStart="30dp"
			android:layout_marginTop="316dp"
			android:background="@drawable/contenedorinfo_shape"
			android:backgroundTint="#EFEFEF" />

		<ImageView
			android:id="@+id/logotipsinfondo"
			android:src="@drawable/logotipsinfondo"
			android:contentDescription="logotipsinfondo"
			android:layout_marginStart="129dp"
			android:layout_marginTop="261dp"
			android:layout_width="157dp"
			android:layout_height="98dp" />

		<ImageView
			android:id="@+id/iconosiguiente"
			android:src="@drawable/iconosiguiente"
			android:contentDescription="iconosiguiente"
			android:layout_marginStart="321dp"
			android:layout_marginTop="702dp"
			android:layout_width="26dp"
			android:layout_height="27dp" />

		<ImageView
			android:id="@+id/fondologin"
			android:src="@drawable/fondologin"
			android:contentDescription="fondologin"
			android:layout_marginStart="-2dp"
			android:layout_marginTop="-54dp"
			android:layout_width="match_parent"
			android:layout_height="321dp" />

		<TextView
			android:id="@+id/txtRFC"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="80dp"
			android:layout_marginTop="360dp"
			android:text="@string/txtRFC"
			android:textColor="#000000"
			android:textSize="20sp"
			android:textStyle="bold" />

		<EditText
			android:id="@+id/entradaRFC"
			android:layout_width="wrap_content"
			android:layout_height="48dp"
			android:layout_marginStart="80dp"
			android:layout_marginTop="380dp"
			android:ems="13"
			android:inputType="text"
			android:hint="@string/entradaRFC"
			android:textColor="#928F8F" />

		<TextView
			android:id="@+id/txtRazonSocial"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="80dp"
			android:layout_marginTop="440dp"
			android:text="@string/txtRazonS"
			android:textColor="#000000"
			android:textSize="20sp"
			android:textStyle="bold" />

		<EditText
			android:id="@+id/entradaRazonSocial"
			android:layout_width="wrap_content"
			android:layout_height="48dp"
			android:layout_marginStart="80dp"
			android:layout_marginTop="460dp"
			android:ems="13"
			android:inputType="text"
			android:hint="@string/entradaRazonS"
			android:textColor="#928F8F" />

		<TextView
			android:id="@+id/txtTel"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="80dp"
			android:layout_marginTop="520dp"
			android:text="@string/txtTelefono"
			android:textColor="#000000"
			android:textSize="20sp"
			android:textStyle="bold" />

		<EditText
			android:id="@+id/entradaTel"
			android:layout_width="wrap_content"
			android:layout_height="48dp"
			android:layout_marginStart="80dp"
			android:layout_marginTop="540dp"
			android:ems="13"
			android:inputType="phone"
			android:hint="@string/entradaTel"
			android:textColor="#928F8F" />

		<TextView
			android:id="@+id/txtCorreo"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="80dp"
			android:layout_marginTop="600dp"
			android:text="@string/txtCorreo"
			android:textColor="#000000"
			android:textSize="20sp"
			android:textStyle="bold" />

		<EditText
			android:id="@+id/entradaCorreo"
			android:layout_width="wrap_content"
			android:layout_height="48dp"
			android:layout_marginStart="80dp"
			android:layout_marginTop="620dp"
			android:ems="13"
			android:inputType="text"
			android:hint="@string/entradaCorreo"
			android:textColor="#928F8F" />

		<ImageView
			android:id="@+id/flechaatras"
			android:src="@drawable/flecharegreso"
			android:contentDescription="flecharegreso"
			android:layout_marginStart="19dp"
			android:layout_marginTop="17dp"
			android:layout_width="39dp"
			android:layout_height="46dp" />

	</RelativeLayout>
</RelativeLayout>
